# transitous

./: .gitignore  .gitmodules  .woodpecker.yml  CODE_OF_CONDUCT.md  Dockerfile  README.md  REUSE.toml  config.ini  docker-compose.yaml  renovate.json  requirements.in  requirements.txt
.devcontainer/: devcontainer.json
.reuse/: dep5
.woodpecker/: data-import.yml  motis-proxy-release.yml  motis-release.yml
LICENSES/: BSD-2-Clause.txt  BSD-2.txt  GPL-2.0-or-later.txt
ansible/: Containerfile  crowd-sourced-realtime.yml  feed-proxy.yml  gtfs-server.yml  hosts  motis-container.yml  motis-staging.yml  motis.yml  reverse-proxy.yml  woodpecker.yml
ci/: fetch-feeds.py  generate-motis-config.py  motis-import.py
docs/: .gitignore  README.md  mkdocs.yml
feeds/: aachen.json  ae.json  al.json  at.json  au-act.json  au-nsw.json  au-nt.json  au-qld.json  au-sa.json  au-tas.json  au-vic.json  au-wa.json  au.json  ba.json  be.json  bg.json  bm.json  br.json  ca-bc.json  ca-on.json  ca-qc.json  ca-sk.json  ca.json  ch.json  cl.json  co.json  cy.json  cz.json  de-berlin.json  de.json  dk.json  ee.json  eg.json  es.json  et.json  eu.json  fi.json  fr.json  gb.json  ge.json  (+103 more)
metastations/: metastations.yml
mkdocs-site/: mkdocs.yml
motis/: config.ini.j2  config.yml
motis-proxy/: Cargo.toml  README.md  Rocket.toml
motis-proxy/src/: main.rs  rate_limit.rs
scripts/: at.lua  au-nsw-sydney-trains.lua  au-vic-Transport-Victoria-metro-trains.lua  be-sncb-colors.lua  be-sncb.lua  bg-bdz.lua  ch-opentransport-colors.lua  ch-opentransportdataswiss.lua  de-DELFI.lua  de-VBN.lua  (+36 more)
(+178 files in other folders)
