# SPDX-FileCopyrightText: 2024 Jonah Brüchert <jbb@kaidan.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "motis-proxy"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1.0"
rocket_cors = { version = "0.6.0", default-features = false }
serde_default = "0.2"
log = "0.4"
rocket_okapi = { version = "0.9", features = [ "rapidoc" ] }
lru = "0.12"
serde_repr = "0.1"
